--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,3 @@
-<!-- Footer -->
 <footer class="footer navbar-fixed-bottom">
   <section id="footer">
       <div class="container">
@@ -11,11 +10,9 @@
             <div class="col-xs-4 col-sm-4 col-md-4">
               <h3 class="text-white">Contatos</h3>
               <ul class="list-unstyled list-inline social text-left">
-                <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook"></i></a></li>
-                <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a></li>
-                <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-instagram"></i></a></li>
-                <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-google-plus"></i></a></li>
-                <li class="list-inline-item"><a href="javascript:void();" target="_blank"><i class="fa fa-envelope"></i></a></li>
+                <li *ngFor="let item of items" class="list-inline-item">
+                    <a href="{{item.url}}"><i class="{{item.icon}}"></i></a>
+                </li>            
               </ul>
             </div>
           </div>
@@ -27,4 +24,3 @@
       </div>
   </section>
 </footer>
-<!-- ./Footer -->
