--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-top-menu></app-top-menu>
-<div class="container">
+<div id="corpo" class="container">
     <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
