--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,8 @@
-<footer class="footer navbar-fixed-bottom">
+<footer class="footer">
   <section id="footer">
       <div class="container">
           <div class="row">
-            <div class="col-xs-8 col-sm-8 col-md-8 text-left text-white">
+            <div class="col-xs-8 col-sm-8 col-md-8 text-left text-white" data-toggle="collapse">
               <h3 class="text-white">Sobre</h3>
               <p>Esse site foi desenvolvido pelos alunos do curso de Sistemas de Informação e Medicina Veterinária do Centro Universitário Newton Paiva</p>
             </div>
@@ -17,6 +17,7 @@
             </div>
           </div>
       </div>
+      
       <div class="footer-copyright grey darken-4">
           <div class="container">
             Projeto Miaudote
