Ajusta cads tela principal

--- a/src/app/components/animals-view/animals-view.component.html
+++ b/src/app/components/animals-view/animals-view.component.html
@@ -9,4 +9,8 @@
     <app-animal-card [animal]="animals[0]"></app-animal-card>
     <app-animal-card [animal]="animals[0]"></app-animal-card>
     <app-animal-card [animal]="animals[0]"></app-animal-card>
+    <app-animal-card [animal]="animals[0]"></app-animal-card>
+    <app-animal-card [animal]="animals[0]"></app-animal-card>
+    <app-animal-card [animal]="animals[0]"></app-animal-card>
+    <app-animal-card [animal]="animals[0]"></app-animal-card>
 </div>
