--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,5 @@
 <!-- <app-side-filter></app-side-filter> -->
-<app-animals-view></app-animals-view>
+
+    <app-carousel-initial></app-carousel-initial>
+    <app-animals-view></app-animals-view>
+
