--- a/src/app/components/carousel-initial/carousel-initial.component.html
+++ b/src/app/components/carousel-initial/carousel-initial.component.html
@@ -1,9 +1,2 @@
-<carousel>
-    <slide *ngFor="let image of images">
-        <img [src]="image.path" style="display: block; width: 100%; height: 5%;">
-        <div class="carousel-caption d-none d-md-block">
-            <h3>{{ image.text }}</h3>
-            <p>{{ image.author }}</p>
-        </div>
-    </slide>
-</carousel>
+<p-galleria [images]="images" panelWidth="500" panelHeight="313" [showCaption]="true" panelWidth="100%"></p-galleria>
+
