feat: implementa Como Adotar

--- a/src/app/components/carousel-initial/carousel-initial.component.html
+++ b/src/app/components/carousel-initial/carousel-initial.component.html
@@ -1,2 +1,3 @@
-<p-galleria [images]="images" panelWidth="500" panelHeight="313" [showCaption]="true" panelWidth="100%"></p-galleria>
-
+<p-galleria [images]="images" panelHeight="350" panelWidth="70%" [showCaption]="true"  [showFilmstrip]="true"
+            transitionInterval="5000">
+</p-galleria>
