--- a/src/app/components/animal-card/animal-card.component.html
+++ b/src/app/components/animal-card/animal-card.component.html
@@ -3,14 +3,14 @@
     <svg class="bd-placeholder-img card-img-top" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
         preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap">
         <title>Placeholder</title>
-        <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image
-            cap</text>
+        <rect width="100%" height="100%" fill="#868e96"></rect>
+        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image Animal</text>
     </svg>
 
     <div *ngIf="animalInFocus" class="card-img-overlay">
         <div class="image-content">
             <span class="animal-name">{{ animal.NOM_ANIMAL }}</span>
-            <span class="btn btn-primary card-button" (click)="navigateToDetails()">Adotar</span>
+            <span class="btn btn-primary card-button" (click)="navigateToDetails('/comoadotar')">Adotar</span>
         </div>
     </div>
 
