--- a/src/app/components/animals-view/animals-view.component.html
+++ b/src/app/components/animals-view/animals-view.component.html
@@ -1,16 +1,3 @@
 <div class="card-group">
-    <!-- <app-animal-card *ngFor="let animal of animals" [animal]="animal"></app-animal-card> -->
-
-    <app-animal-card [animal]="animals[0]"></app-animal-card>
-    <app-animal-card [animal]="animals[0]"></app-animal-card>
-    <app-animal-card [animal]="animals[0]"></app-animal-card>
-    <app-animal-card [animal]="animals[0]"></app-animal-card>
-    <app-animal-card [animal]="animals[0]"></app-animal-card>
-    <app-animal-card [animal]="animals[0]"></app-animal-card>
-    <app-animal-card [animal]="animals[0]"></app-animal-card>
-    <app-animal-card [animal]="animals[0]"></app-animal-card>
-    <app-animal-card [animal]="animals[0]"></app-animal-card>
-    <app-animal-card [animal]="animals[0]"></app-animal-card>
-    <app-animal-card [animal]="animals[0]"></app-animal-card>
-    <app-animal-card [animal]="animals[0]"></app-animal-card>
+    <app-animal-card *ngFor="let animal of animals" [animal]="animal"></app-animal-card>
 </div>
