Feat: Ajusta footer mobile

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer [class]="defineClasseFooter()">
   <section id="footer">
       <div class="container">
           <div class="row">
