--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -10,7 +10,15 @@ section .section-title {
 }
 .footer {
     background: #050505 !important;
+    position: fixed;
+    bottom:0;
+    width: 100%;
 }
+
+.footer-mobile {
+    background: #050505 !important;
+}
+
 #footer h5{
 	padding-left: 10px;
     border-left: 3px solid #eeeeee;
