Feat: Ajuste como adotar

--- a/src/app/components/how-to-adopt/how-to-adopt.component.html
+++ b/src/app/components/how-to-adopt/how-to-adopt.component.html
@@ -2,17 +2,12 @@
     <div class="card-body">
         <h1>Como Adotar</h1>
         <p>
-            Quem não deseja ser muito amado todos os dias?
-        </p>
-        <p>
-            Nossos amigos de quatro patas estão esperando por você, adote!
+            Fale conosco por e-mail (o que vocês criaram com o domínio miaudote) ou através do nosso instagram.
         </p>
         
         <h2>Recomendações ao adotante:</h2>
-        <p>-Ao adotar um animal você será responsável por ele durante toda a vida.</p>
-        <p>-Se comprometa com os gastos do seu bichinho como ração, vacinas, vermífugos e consultas ao veterinário.</p>
-        <p>-Dê preferência a animais castrados ou se comprometa a castrá-lo.</p>
-        <p>-Nunca abandone seu animal, pois ele se apega aos amigos humanos e podem ter depressão profunda por causa do abandono. Além disso, na rua seu cão ou gato está exposto a doenças e acidentes.</p>
+        <p>O animal requer atenção e possui necessidades que devem ser compreendidas.</p> 
+        <p>Por isso tenha certeza da decisão, converse com familiares (caso seja o caso) antes de adotar.</p>
         
         <h2>Requisitos para adoção:</h2>
         <b>**Essas informações dependem da ONG**</b>
