feat: ajusta tela principal

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,12 @@
 <!-- <app-side-filter></app-side-filter> -->
+<app-carousel-initial></app-carousel-initial>
 
-    <app-carousel-initial></app-carousel-initial>
-    <app-animals-view></app-animals-view>
+<div class="ui-g">
+        <div class="ui-g-12 ui-md-6 ui-lg-3">
+            ESPAÇO FILTRO
+        </div>
+        <div class="ui-g-12 ui-md-6 ui-lg-9">
+            <app-animals-view></app-animals-view>
+        </div>
+</div>    
 
