feat: Remove mini imagens do carrosel

--- a/src/app/components/carousel-initial/carousel-initial.component.html
+++ b/src/app/components/carousel-initial/carousel-initial.component.html
@@ -1,3 +1,3 @@
-<p-galleria [images]="images" panelHeight="400" panelWidth="70%" [showCaption]="true"  [showFilmstrip]="true"
+<p-galleria [images]="images" panelHeight="400" panelWidth="70%" [showCaption]="true"  [showFilmstrip]="false"
             transitionInterval="5000">
 </p-galleria>
