feat: cria filtro basico

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,8 @@
-<!-- <app-side-filter></app-side-filter> -->
 <app-carousel-initial></app-carousel-initial>
 
 <div class="ui-g">
-        <div class="ui-g-12 ui-md-6 ui-lg-3">
-            ESPAÇO FILTRO
+    <div class="ui-g-12 ui-md-6 ui-lg-3">
+            <app-side-filter></app-side-filter>
         </div>
         <div class="ui-g-12 ui-md-6 ui-lg-9">
             <app-animals-view></app-animals-view>
