--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
+*  {
+    margin:0;
+    padding:0;
+}
+
 body {
     background-image: url("./assets/fundo/patas.jpg");
     background-size: 40%;
     background-attachment: fixed;
+    height:100%;
+}
+
+html {height:100%;}
+
+.geral {
+    min-height:100%;
+    position:relative;
+    width:100%;
 }
