feat: Adiciona container

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,16 +1,18 @@
-<div class="card">
-    <div class="card-body">
-        <h1>Quem Somos</h1>
-        <p>
-            O Miaudote é um site criado com a finalidade de promover a adoção de cães e 
-            gatos que foram abandonados, informando, também, sobre guarda responsável e 
-            suas implicações.
-        </p>
-        <p>
-            O idealizador do site é o professor Leonardo Rago e os criadores da página 
-            são os alunos do projeto de extensão InformaCão, do curso de Medicina Veterinaria, 
-            em conjunto com os alunos do curso de Sistemas de Informação, orientados pelo professor 
-            Tarley Lana.
-        </p>
-    </div>
+<div class="container">
+    <div class="card">
+        <div class="card-body">
+            <h1>Quem Somos</h1>
+            <p>
+                O Miaudote é um site criado com a finalidade de promover a adoção de cães e 
+                gatos que foram abandonados, informando, também, sobre guarda responsável e 
+                suas implicações.
+            </p>
+            <p>
+                O idealizador do site é o professor Leonardo Rago e os criadores da página 
+                são os alunos do projeto de extensão InformaCão, do curso de Medicina Veterinaria, 
+                em conjunto com os alunos do curso de Sistemas de Informação, orientados pelo professor 
+                Tarley Lana.
+            </p>
+        </div>
+    </div>    
 </div>
