--- a/src/app/components/how-to-adopt/how-to-adopt.component.html
+++ b/src/app/components/how-to-adopt/how-to-adopt.component.html
@@ -1,19 +1,21 @@
-<div class="card">
-    <div class="card-body">
-        <h1>Como Adotar</h1>
-        <p>
-            Fale conosco por e-mail (o que vocês criaram com o domínio miaudote) ou através do nosso instagram.
-        </p>
-        
-        <h2>Recomendações ao adotante:</h2>
-        <p>O animal requer atenção e possui necessidades que devem ser compreendidas.</p> 
-        <p>Por isso tenha certeza da decisão, converse com familiares (caso seja o caso) antes de adotar.</p>
-        
-        <h2>Requisitos para adoção:</h2>
-        <b>**Essas informações dependem da ONG**</b>
-        <p>-Ser maior de 18 anos ou estar acompanhado por um responsável.</p>
-        <p>-Identidade e CPF(original e cópia).</p>
-        <p>-Comprovante de Residência.</p>
-
-    </div>
+<div class="container">
+    <div class="card">
+        <div class="card-body">
+            <h1>Como Adotar</h1>
+            <p>
+                Fale conosco por e-mail (o que vocês criaram com o domínio miaudote) ou através do nosso instagram.
+            </p>
+            
+            <h2>Recomendações ao adotante:</h2>
+            <p>O animal requer atenção e possui necessidades que devem ser compreendidas.</p> 
+            <p>Por isso tenha certeza da decisão, converse com familiares (caso seja o caso) antes de adotar.</p>
+            
+            <h2>Requisitos para adoção:</h2>
+            <b>**Essas informações dependem da ONG**</b>
+            <p>-Ser maior de 18 anos ou estar acompanhado por um responsável.</p>
+            <p>-Identidade e CPF(original e cópia).</p>
+            <p>-Comprovante de Residência.</p>
+    
+        </div>
+    </div>    
 </div>
