Fix: Finaliza footer

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <app-carousel-initial></app-carousel-initial>
 
-<div class="ui-g">
+<div id="corpo" class="ui-g">
     <div class="ui-g-12 ui-md-6 ui-lg-3">
             <app-side-filter></app-side-filter>
         </div>
