--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -6,7 +6,9 @@
     background: #050505 !important;
     position: absolute;
     bottom:0;
-    width:100%;    
+    width:100%;   
+    margin: auto auto;
+    padding: 10px 5px; 
 }
 
 .social:hover {
