feat: Ajusta card animal

--- a/src/app/components/animal-card/animal-card.component.html
+++ b/src/app/components/animal-card/animal-card.component.html
@@ -1,11 +1,13 @@
 <div class="card" (pointerenter)="animalFocus()" (pointerleave)="animalFocusOut()" style="width: 17rem; height: 20rem;">
-
+    <img src="../../../assets/card/img_1.jpg" alt="...">
+    <!--
     <svg class="bd-placeholder-img card-img-top" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-        preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap">
-        <title>Placeholder</title>
+        preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Imagem Animal">
+        <<title>TESTE</title>
         <rect width="100%" height="100%" fill="#868e96"></rect>
-        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image Animal</text>
+        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image Animal</text>>
     </svg>
+    -->
 
     <div *ngIf="animalInFocus" class="card-img-overlay">
         <div class="image-content">
