style: Estiliza botão aplicar filtros

--- a/src/app/components/side-filter/side-filter.component.html
+++ b/src/app/components/side-filter/side-filter.component.html
@@ -42,7 +42,7 @@
         <hr>
 
         <div>
-            <button type="button" class="btn btn-primary">
+            <button type="button" class="filter-button">
                 Aplicar
             </button>
         </div>
