--- a/src/app/components/side-filter/side-filter.component.scss
+++ b/src/app/components/side-filter/side-filter.component.scss
@@ -1,3 +1,15 @@
 .filter {
     padding: 5px;
 }
+
+.filter-button {
+    width: 100%;
+    border-color: #000;
+    background-color: #000;
+    color: white;
+    border-radius: .15rem;
+}
+
+.filter-button:active {
+    background: #2b2a2a !important;
+}
