feat: Add atributo name no checkbox

--- a/src/app/html-components/checkbox-button/checkbox-button.component.html
+++ b/src/app/html-components/checkbox-button/checkbox-button.component.html
@@ -1,5 +1,5 @@
 <div class="container" (click)="click()">
-    <input type="checkbox" [id]="id">
+    <input type="checkbox" [name]="name" [id]="id">
     <label [for]="id">
         {{ label }}
     </label>
