feat: Remove hover do card de animal

--- a/src/app/components/animal-card/animal-card.component.scss
+++ b/src/app/components/animal-card/animal-card.component.scss
@@ -7,6 +7,11 @@
     align-items: center;
 }
 
+.animals-card {
+    width: 17rem; 
+    height: 20rem;
+}
+
 .card-button {
     width: 100%;
     border-color: #000;
