--- a/src/app/components/animal-card/animal-card.component.html
+++ b/src/app/components/animal-card/animal-card.component.html
@@ -1,18 +1,11 @@
-<div class="card" (pointerenter)="animalFocus()" (pointerleave)="animalFocusOut()" style="width: 17rem; height: 20rem;">
-    <img src="../../../assets/card/img_1.jpg" alt="...">
-    <!--
-    <svg class="bd-placeholder-img card-img-top" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-        preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Imagem Animal">
-        <<title>TESTE</title>
-        <rect width="100%" height="100%" fill="#868e96"></rect>
-        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image Animal</text>>
-    </svg>
-    -->
+<div class="card animals-card">
+    
+    <img src="../../../assets/card/img_1.jpg">
 
-    <div *ngIf="animalInFocus" class="card-img-overlay">
+    <div class="card-img-overlay">
         <div class="image-content">
             <span class="animal-name">{{ animal.NOM_ANIMAL }}</span>
-            <span class="btn btn-primary card-button" (click)="navigateToDetails('/comoadotar')">Adotar</span>
+            <span class="btn btn-primary card-button" (click)="navigateToDetails('/comoadotar')">Detalhes</span>
         </div>
     </div>
 
