--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,10 +2,14 @@
 
 <div id="corpo" class="ui-g">
     <div class="ui-g-12 ui-md-6 ui-lg-2">
-            <app-side-filter></app-side-filter>
-        </div>
-        <div class="ui-g-12 ui-md-6 ui-lg-10">
-            <app-animals-view></app-animals-view>
-        </div>
+        <app-side-filter></app-side-filter>
+    </div>
+    <div class="ui-g-12 ui-md-6 ui-lg-10">
+        <p-panel header="ADOTE UM BICHINHO!" [toggleable]="true">
+            <div class="container">
+                <app-animals-view></app-animals-view>
+            </div>
+        </p-panel>
+    </div>
 </div>    
 
