feat: ajusta card animal

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,11 +5,14 @@
         <app-side-filter></app-side-filter>
     </div>
     <div class="ui-g-12 ui-md-6 ui-lg-10">
-        <p-panel header="ADOTE UM BICHINHO!" [toggleable]="true">
-            <div class="container">
-                <app-animals-view></app-animals-view>
-            </div>
-        </p-panel>
+        <div class="section-adote">
+            <div class="title ng-scope">ADOTE!</div>
+                <div class="container">
+                    <div class="row adote">
+                        <app-animals-view></app-animals-view>
+                    </div>                    
+                </div>
+        </div>
     </div>
 </div>    
 
