--- a/src/app/components/animal-card/animal-card.component.html
+++ b/src/app/components/animal-card/animal-card.component.html
@@ -1,6 +1,6 @@
 <div class="card animals-card">
     
-    <img src="../../../assets/card/img_1.jpg">
+    <img src="../../../assets/card/img_1.jpg" class="rounded">
 
     <div class="card-img-overlay">
         <div class="image-content">
