--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,26 @@
 #corpo{
     padding-bottom: 8%;
 }
+
+.section-adote {
+    margin-top: 13px;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 3px 2px #DFDFDF;
+    background-color: #FFF;
+}
+
+.title {
+    font-size: 17pt;
+    background-color: #FFF;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 20px;
+    border-radius: 5px;
+    margin-top: -28px;
+    float: left;
+}
+
+.adote {
+    margin-top: 13px;
+}
