--- a/src/app/components/animals-view/animals-view.component.html
+++ b/src/app/components/animals-view/animals-view.component.html
@@ -1,4 +1,4 @@
-<div class="card-group">
+<div class="card-deck">
     <app-animal-card *ngFor="let animal of animals" [animal]="animal"></app-animal-card>
 </div>
 
