--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer [class]="defineClasseFooter()">
+<footer [class]="defineClassFooter()">
     <div class="container">
       <div class="row">
         <div class="col-xs-8 col-sm-8 col-md-8 text-left text-white" data-toggle="collapse">
