--- a/src/app/components/side-filter/side-filter.component.scss
+++ b/src/app/components/side-filter/side-filter.component.scss
@@ -18,7 +18,7 @@
     width: 80%;
     border-bottom: 10px;
     background-color: white !important;
-    border-color: white !important;
+    border-color: #9c9c9b !important;
     box-shadow: 2px 2px 2px gray !important;
 }
 
