feat: Esconde carrosel para mobile

--- a/src/app/components/carousel-initial/carousel-initial.component.html
+++ b/src/app/components/carousel-initial/carousel-initial.component.html
@@ -1,4 +1,4 @@
-<carousel class="d-none" [showIndicators]="false" [interval]="3000">
+<carousel class="d-none d-md-block" [showIndicators]="false" [interval]="3000">
   <slide *ngFor="let image of images">
     <img [src]="image.source" [alt]="image.alt" style="display: block; width: 100%; height: 400px; max-height: 400px;">
     <div class="carousel-caption d-none d-md-block">
