feat: Exibe foto no card animal

--- a/src/app/components/animal-card/animal-card.component.scss
+++ b/src/app/components/animal-card/animal-card.component.scss
@@ -7,6 +7,11 @@
     align-items: center;
 }
 
+.image-card {
+    width: 17rem; 
+    height: 20rem;
+}
+
 .animals-card {
     width: 17rem; 
     height: 20rem;
