--- a/src/app/components/animal-card/animal-card.component.html
+++ b/src/app/components/animal-card/animal-card.component.html
@@ -1,11 +1,11 @@
 <div class="card animals-card">
-    
-    <img src="../../../assets/card/img_1.jpg" class="rounded">
+
+    <img [src]="animal.BIN_FOTO" class="image-card">
 
     <div class="card-img-overlay">
         <div class="image-content">
             <span class="animal-name">{{ animal.NOM_ANIMAL }}</span>
-            <span class="btn btn-primary card-button" (click)="navigateToDetails('/comoadotar')">Detalhes</span>
+            <span class="btn btn-primary card-button" (click)="navigateToDetails()">Detalhes</span>
         </div>
     </div>
 
