--- a/src/app/components/side-filter/side-filter.component.scss
+++ b/src/app/components/side-filter/side-filter.component.scss
@@ -2,16 +2,8 @@
     padding: 5px;
 }
 
-.filter-button {
-    width: 100%;
-    border-color: #000;
-    background-color: #000;
-    color: white;
-    border-radius: .15rem;
-}
-
-.filter-button:active {
-    background: #2b2a2a !important;
+.btn-filter {
+    width: 100% !important;
 }
 
 .filter-button-mobile {
