refactor: Cria classe geral width 100%

--- a/src/app/components/side-filter/side-filter.component.html
+++ b/src/app/components/side-filter/side-filter.component.html
@@ -50,7 +50,7 @@
             <hr>
 
             <div>
-                <button type="button" class="btn btn-dark btn-filter" (click)="applyFilter()">
+                <button type="button" class="btn btn-dark width-100" (click)="applyFilter()">
                     Aplicar
                 </button>
             </div>
