--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,12 @@
-<div class="container-card">
+<div class="container-card" (keyup.enter)="sendLogin()">
     <div class="card" style="width: 100%; height: 100%;">
         <div class="card-body">
             <div class="d-flex justify-content-center container-logo">
                 <img src="../../../assets/logo/logomiaudote.png" width="100">
             </div>
-            <input type="text" class="form-control width-100" placeholder="Login">
-            <input type="password" class="form-control width-100" placeholder="Senha">
-            <button type="button" class="btn btn-dark width-100">Acessar</button>
+            <input type="text" [(ngModel)]="login.email" name="email" class="form-control width-100" placeholder="E-mail">
+            <input type="password" [(ngModel)]="login.senha" name="senha" class="form-control width-100" placeholder="Senha">
+            <button type="button" class="btn btn-dark width-100" (click)="sendLogin()">Acessar</button>
         </div>
     </div>
 </div>
