feat: Corrige erros

--- a/src/app/components/animal-detail/animal-detail.component.html
+++ b/src/app/components/animal-detail/animal-detail.component.html
@@ -2,7 +2,7 @@
 <br>
 <span>Ind. Idade: {{ animal.IND_IDADE }}</span>
 <br>
-<span>Ind. Porte: {{ animal.IND_PORTE }}</span>
+<span>Ind. Porte: {{ animal.IND_PORTE_ANIMAL }}</span>
 <br>
 <span>Ind. Sexo: {{ animal.IND_SEXO_ANIMAL }}</span>
 <br>
