refactor Corrige nome de variavel

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <app-carousel-initial></app-carousel-initial>
 
-<div id="corpo" class="ui-g">
+<div id="body" class="ui-g">
     <div class="ui-g-12 ui-md-6 ui-lg-2">
         <app-side-filter></app-side-filter>
     </div>
