feat: Add home-admin

--- a/src/app/components/home-admin/home-admin.component.html
+++ b/src/app/components/home-admin/home-admin.component.html
@@ -1,1 +1,8 @@
-<p>home-admin works!</p>
+<div class="ui-g">
+        <div class="ui-g-12 ui-md-6 ui-lg-2">
+            <app-admin-menu></app-admin-menu>
+        </div>
+        <div class="ui-g-12 ui-md-6 ui-lg-10">
+            CONTEUDO
+        </div>
+    </div> 
