--- a/src/app/components/side-filter/side-filter.component.html
+++ b/src/app/components/side-filter/side-filter.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="d-flex justify-content-center">
     <button *ngIf="isMobileButtonVisible" class="btn btn-primary filter-button-mobile" data-toggle="collapse" href="#side-filter" role="button" aria-expanded="false"
         aria-controls="side-filter">
         <i id="filter-icon" class="fa fa-filter" aria-hidden="true"></i>
