--- a/src/app/components/home-admin/home-admin.component.html
+++ b/src/app/components/home-admin/home-admin.component.html
@@ -1,8 +1,2 @@
-<div class="ui-g">
-        <div class="ui-g-12 ui-md-6 ui-lg-2">
-            <app-admin-menu></app-admin-menu>
-        </div>
-        <div class="ui-g-12 ui-md-6 ui-lg-10">
-            CONTEUDO
-        </div>
-    </div> 
+CONTEÚDO
+<app-table></app-table>
