--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
 <app-top-menu *ngIf="isMainMenuVisible"></app-top-menu>
-    <router-outlet></router-outlet>
+
+<div *ngIf="isAdminMenuVisible" class="ui-g">
+    <div class="ui-g-12 ui-md-6 ui-lg-2">
+        <app-admin-menu></app-admin-menu>
+    </div>
+    <div class="ui-g-12 ui-md-6 ui-lg-10">
+        <!-- <router-outlet></router-outlet> -->
+    </div>
+</div>
+
+<router-outlet></router-outlet>
 <app-footer *ngIf="isMainMenuVisible"></app-footer>
