feat: Add efeito hover na tabela e evento de click

--- a/src/app/html-components/table/table.component.html
+++ b/src/app/html-components/table/table.component.html
@@ -5,7 +5,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let element of list">
+        <tr *ngFor="let element of list" (click)="clickElement(element)">
             <td *ngFor="let header of headers">{{ element[header.value] }}</td>
         </tr>
     </tbody>
