--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
 <app-top-menu *ngIf="isMainMenuVisible"></app-top-menu>
 
-<div *ngIf="isAdminMenuVisible" class="ui-g">
-    <div class="ui-g-12 ui-md-6 ui-lg-2">
-        <app-admin-menu></app-admin-menu>
-    </div>
-    <div class="ui-g-12 ui-md-6 ui-lg-10">
-        <!-- <router-outlet></router-outlet> -->
-    </div>
+<div *ngIf="isAdminMenuVisible" class="ui-g-12 ui-md-6 ui-lg-2">
+    <app-admin-menu></app-admin-menu>
 </div>
 
 <router-outlet></router-outlet>
+
 <app-footer *ngIf="isMainMenuVisible"></app-footer>
