feat: Altera label botão Novo Animal

--- a/src/app/components/animal/animal-list/animal-list.component.html
+++ b/src/app/components/animal/animal-list/animal-list.component.html
@@ -2,7 +2,7 @@
     <div class="card">
         <h3>{{ title }}</h3>
         <div class="action-button">
-            <button type="button" class="btn btn-dark">Novo</button>
+            <button type="button" class="btn btn-dark">Novo Animal</button>
         </div>
         <app-table [list]="animals" [headers]="headers"></app-table>
     </div>
