--- a/src/app/components/institution/institution-list/institution-list.component.html
+++ b/src/app/components/institution/institution-list/institution-list.component.html
@@ -1,1 +1,9 @@
-<p>institution-list works!</p>
+<div class="ui-g-10 ui-md-10 ui-lg-10">
+    <div class="card">
+        <h3>{{ title }}</h3>
+        <div class="action-button">
+            <button type="button" class="btn btn-dark">Nova Instituição</button>
+        </div>
+        <app-table [list]="institutions" [headers]="headers"></app-table>
+    </div>
+</div>
