feat: Add botao logout

--- a/src/app/components/admin-menu/admin-menu.component.html
+++ b/src/app/components/admin-menu/admin-menu.component.html
@@ -12,4 +12,15 @@
             </div>
         </li>
     </ul>
+
+    <hr>
+
+    <ul class="nav flex-column">
+        <li class="nav-item" (click)="logout()">
+            <div class="d-flex align-items-center container-item">
+                <i class="fa fa-sign-out" aria-hidden="true"></i>
+                <a class="nav-link">Sair</a>
+            </div>
+        </li>
+    </ul>
 </div>
