--- a/src/app/components/institution/institution-list/institution-list.component.html
+++ b/src/app/components/institution/institution-list/institution-list.component.html
@@ -2,8 +2,8 @@
     <div class="card">
         <h3>{{ title }}</h3>
         <div class="action-button">
-            <button type="button" class="btn btn-dark">Nova Instituição</button>
+            <button type="button" class="btn btn-dark" (click)="openFormNewInstitution()">Nova Instituição</button>
         </div>
-        <app-table [list]="institutions" [headers]="headers"></app-table>
+        <app-table [list]="institutions" [headers]="headers" (clickedElement)="openFormEditInstitution($event.element)"></app-table>
     </div>
 </div>
